tests/grammar/schema/init/init_add_member_fail_1/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:8:9
  |
8 |         "fullName": "full name"
  |         ^ Cannot add member 'fullName' to schema 'Name'
  |